--- a/src/app/blog/[slug]/styles.module.css
+++ b/src/app/blog/[slug]/styles.module.css
@@ -117,6 +117,8 @@
   .markdown {
     margin: auto;
     margin-bottom: 2rem;
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 100;
   }
   
   @media (min-width: 1280px) {
@@ -183,11 +185,11 @@
   }
   
   .markdown a {
-    color: #c40000;
+    color: gray;
   }
   
   .markdown a:hover {
-    color: #c40000;
+    color: gray;
     text-decoration: underline;
   }
   
