--- a/src/app/blog/[slug]/styles.module.css
+++ b/src/app/blog/[slug]/styles.module.css
@@ -32,15 +32,6 @@
     color: black;
   }
   
-  .breakLine {
-    height: 7px;
-    background-color: black;
-    border-radius: 5px 0px 5px 0px;
-    margin: 20px 50px;
-    margin: auto;
-    max-width: 100%;
-  }
-  
   @media (min-width: 640px) {
     .breakLine {
       max-width: 1000px;
@@ -66,17 +57,6 @@
     margin-bottom: 2rem;
   }
   
-  .donateButton {
-    background-color: black;
-    border: 2px solid black;
-    border-radius: 12px;
-    color: white;
-    padding: 12px 1.5rem;
-    transition: background-color 0.2s ease, color 0.2s ease;
-    font-weight: 500;
-    font-size: 1.25rem;
-  }
-  
   a.inlineDonateButton.donateButton {
     color: white; /* Hack to fix this **** */
   }
@@ -92,19 +72,20 @@
     justify-self: center;
     padding-top: 2rem;
   }
-  
-  .icon {
-    display: flex;
-    border: 0;
-    width: 50px;
-    height: auto;
-    max-width: 100%;
-    align-items: center;
-    justify-content: center;
-    justify-items: center;
-    justify-self: center;
+
+  .card {
+    margin: auto;
+    width: 100%;
+    height:20rem;
+    border-radius: 0.75rem;
+    background-color: white;
+    padding:  1.75rem;
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    top: 50%;
+    right: 50%;
+    transform: translate(25%, 15%);
   }
-  
+
   .markdown {
     margin: auto;
     margin-bottom: 2rem;
@@ -137,24 +118,7 @@
     text-align: justify;
     list-style-type:circle;
   }
-  
-  .markdown img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    display: block;
-    margin: auto;
-    object-fit: contain;
-  }
-  
-  .imageWrapper {
-    display: flex;
-    justify-self: center;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-  }
-  
+
   .markdown h1,
   .markdown h2 {
     font-weight: bold;
